--- a/src/css/annotation_window/annotation_window.less
+++ b/src/css/annotation_window/annotation_window.less
@@ -1,4 +1,4 @@
-.mr_annotation_window {
+.ym_annotation_window {
   position: absolute;
   //display: flex;
   //flex-direction: column;
@@ -26,13 +26,6 @@
       opacity: 0.95;
       font-size: 1.5em;
     }
-  }
-}
-
-.mr_annotation_window.fixed_height_cells {
-  .annowin_anno > .normal_view {
-    height: 100px;
-    overflow-y: scroll;
   }
 }
 
